--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -28,3 +28,27 @@ $variable: value 2;
 }
 
 @use "sass:math" as math;
+
+$bg: #777;
+
+
+@function text($bg) {
+  @if(lightness($bg) > 50) {
+    @return #000;   
+  } @else {
+    @return #FFF;
+  }
+}
+
+@mixin dc($color) { // dc is short for dynamic color
+  background: $color;
+  color: text($color);
+}
+
+body {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  @include dc($bg);
+}
