--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -27,3 +27,26 @@ html {
   font-size: 10rem;
   flex-flow: column;
 }
+$bg: #777;
+
+
+@function text($bg) {
+  @if(lightness($bg) > 50) {
+    @return #000;   
+  } @else {
+    @return #FFF;
+  }
+}
+
+@mixin dc($color) { // dc is short for dynamic color
+  background: $color;
+  color: text($color);
+}
+
+body {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  @include dc($bg);
+}
